manifests/dashboard/nginx-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dashboard
  labels:
    app: nginx-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-dashboard
  template:
    metadata:
      labels:
        app: nginx-dashboard
    spec:
      serviceAccountName: dashboard-reader
      nodeSelector:
        kubernetes.io/hostname: raspberrypi
      containers:
        - name: dashboard
          image: ghcr.io/janikhenz/dashboard2:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes: []
