manifests/dashboard/nginx-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-dashboard-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: nginx-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
